# shadowsocks-libevent

./: .clang-format  CMakeLists.txt  README.md  aead.c  aead.h  cipher.c  client.c  client.h  conanfile.txt  config.c  context.c  crypto.c  crypto.h  logger.h  main.c  proxy.c  proxy.h  server.c  server.h  socks.c  socks.h  tcp.c  tcp.h
src/: CMakeLists.txt  aead.c  cipher.h  client.h  config.c  config.h  context.h  logger.h  main.c  proxy.c  proxy.h  server.c  server.h  socks.h  tcp.c
test/: CMakeLists.txt  test.cpp
